# qcardia-app

./: CITATION.cff  README.md  pyproject.toml
src/: main.py
src/controllers/: dicom_controller.py
src/model/: dicom_model.py
src/view/: dicom_view.py  main_window.py  ui_main_window.py  utils.py
src/view/ui/: main_window.ui
